@@ -15,13 +15,14 @@ import org.baratinage.ui.component.SimpleRadioButtons;
 import org.baratinage.ui.container.SimpleFlowPanel;
 import org.baratinage.ui.plot.ColorPalette;
 import org.baratinage.ui.plot.EditablePlotItem;
-import org.baratinage.ui.plot.MultiPlotContainer;
 import org.baratinage.ui.plot.Plot;
 import org.baratinage.ui.plot.PlotBar;
+import org.baratinage.ui.plot.PlotContainer;
 import org.baratinage.ui.plot.PlotEditor;
+import org.baratinage.ui.plot.PlotInfiniteBand;
 import org.baratinage.ui.plot.PlotInfiniteLine;
 import org.baratinage.ui.plot.PlotPoints;
-import org.jfree.data.Range;
+import org.baratinage.ui.plot.StackedPlot;
 
 public class ShiftDetectionMainPlot extends SimpleFlowPanel {
 
@@ -32,12 +33,12 @@ public class ShiftDetectionMainPlot extends SimpleFlowPanel {
   private final SimpleFlowPanel plotArea;
   private final SimpleFlowPanel plotPanel;
   private final RatingCurvePlotToolsPanel toolsPanel;
-  private final SimpleRadioButtons<String> radioDischargeOrStage;
+  public final SimpleRadioButtons<String> radioDischargeOrStage;
 
   public final PlotEditor plotEditor;
   private final JToggleButton plotEditorToggleBtn;
 
-  private MultiPlotContainer mainPlot;
+  public PlotContainer mainPlot;
 
   public ShiftDetectionMainPlot(
       List<ResultShift> shifts,
@@ -70,8 +71,13 @@ public class ShiftDetectionMainPlot extends SimpleFlowPanel {
     JRadioButton stageBtn = radioDischargeOrStage.addOption("h", T.text("stage"), "h");
     JRadioButton dischargeBtn = radioDischargeOrStage.addOption("q", T.text("discharge"), "q");
 
-    toolsPanel.addChild(stageBtn, false);
-    toolsPanel.addChild(dischargeBtn, false);
+    T.t(this, () -> {
+      stageBtn.setText(T.text("stage"));
+      dischargeBtn.setText(T.text("discharge"));
+    });
+
+    toolsPanel.add(stageBtn);
+    toolsPanel.add(dischargeBtn);
 
     radioDischargeOrStage.addChangeListener(l -> {
       boolean isDischargePlot = radioDischargeOrStage.getSelectedId().equals("q");
@@ -106,6 +112,7 @@ public class ShiftDetectionMainPlot extends SimpleFlowPanel {
 
     List<PlotBar> shiftBars = shifts.stream().map(s -> s.distribution()).toList();
     List<PlotInfiniteLine> shiftLines = shifts.stream().map(s -> s.line()).toList();
+    List<PlotInfiniteBand> shiftBands = shifts.stream().map(s -> s.band()).toList();
     List<PlotPoints> ht = periods.stream().map(p -> p.htPoints()).toList();
     List<PlotPoints> Qt = periods.stream().map(p -> p.QtPoints()).toList();
 
@@ -114,72 +121,88 @@ public class ShiftDetectionMainPlot extends SimpleFlowPanel {
     for (int k = 0; k < n - 1; k++) {
       shiftBars.get(k).setPaint(colors[k]);
       shiftLines.get(k).setPaint(colors[k]);
+      shiftBands.get(k).setFillPaint(colors[k]);
+      shiftBands.get(k).setAlpha(0.5f);
       ht.get(k).setPaint(colors[k]);
       Qt.get(k).setPaint(colors[k]);
     }
     ht.get(n - 1).setPaint(colors[n - 1]);
     Qt.get(n - 1).setPaint(colors[n - 1]);
 
-    Plot shiftsPlot = new Plot(false, true);
+    Plot dischargePlot = new Plot(true, true);
+    dischargePlot.addXYItems(shiftBands);
+    dischargePlot.addXYItems(shiftLines);
+    dischargePlot.addXYItems(Qt);
+
+    Plot shiftsPlot = new Plot(true, true);
     shiftsPlot.addXYItems(shiftBars);
     shiftsPlot.addXYItems(shiftLines);
+    shiftsPlot.addXYItems(shiftBands);
     shiftsPlot.plot.getRangeAxis().setVisible(false);
 
     Plot stagePlot = new Plot(true, true);
     stagePlot.addXYItems(ht);
     stagePlot.addXYItems(shiftLines);
+    stagePlot.addXYItems(shiftBands);
 
-    Plot dischargePlot = new Plot(true, true);
-    dischargePlot.addXYItems(Qt);
-    dischargePlot.addXYItems(shiftLines);
-
-    Range range = null;
-    if (mainPlot != null) {
-      range = mainPlot.getCurrentDomainRange();
-    }
-
-    mainPlot = new MultiPlotContainer();
-
-    if (range != null) {
-      mainPlot.setDomainRange(range);
-    }
+    mainPlot = new PlotContainer();
+    StackedPlot stackedPlot = null;
 
     plotPanel.removeAll();
     boolean isDischargePlot = radioDischargeOrStage.getSelectedId().equals("q");
 
     if (!isDischargePlot) {
-      mainPlot.addPlot(stagePlot, 3);
+      stackedPlot = new StackedPlot(stagePlot, 3);
     } else {
-      mainPlot.addPlot(dischargePlot, 3);
+      stackedPlot = new StackedPlot(dischargePlot, 3);
     }
 
-    mainPlot.addPlot(shiftsPlot, 1);
-    mainPlot.topLeftPanel.addChild(plotEditorToggleBtn, false);
-    mainPlot.setDomainRange(mainPlot.getCurrentDomainRange());
+    stackedPlot.addSubplot(shiftsPlot, 1);
+    // mainPlot.toolsPanel.addChild(plotEditorToggleBtn, false);
+    mainPlot.toolsPanel.add(plotEditorToggleBtn);
+    mainPlot.setPlot(stackedPlot);
 
     plotPanel.addChild(mainPlot, true);
 
-    toolsPanel.updatePlotAxis(dischargePlot);
+    toolsPanel.updatePlotAxis(dischargePlot, plotEditor.getEditablePlot("mainPlot"));
 
     plotEditor.addEditablePlot("mainPlot", isDischargePlot ? dischargePlot : stagePlot);
     plotEditor.addEditablePlot("shiftPlot", shiftsPlot);
 
     plotEditor.getEditablePlot("mainPlot").setYAxisLabel(
-        isDischargePlot ? String.format("%s [m3/s]", T.text("discharge")) : String.format("%s [m]", T.text("stage")));
+        isDischargePlot
+            ? "%s [m3/s]".formatted(T.text("discharge"))
+            : "%s [m]".formatted(T.text("stage")));
 
     for (int k = 0; k < shiftBars.size(); k++) {
-      plotEditor.addEditablePlotItem("shift_bar_" + k, shiftBars.get(k).getLabel(),
+      EditablePlotItem epi = plotEditor.addEditablePlotItem("shift_bar_" + k,
+          shiftBars.get(k).getLabel(),
           shiftBars.get(k));
+      epi.setShowLegend(false);
     }
     for (int k = 0; k < shiftLines.size(); k++) {
-      plotEditor.addEditablePlotItem("shift_line_" + k, shiftLines.get(k).getLabel(), shiftLines.get(k));
+      EditablePlotItem epi = plotEditor.addEditablePlotItem("shift_line_" + k,
+          shiftLines.get(k).getLabel(),
+          shiftLines.get(k));
+      epi.setShowLegend(false);
+    }
+    for (int k = 0; k < shiftBands.size(); k++) {
+      EditablePlotItem epi = plotEditor.addEditablePlotItem("shift_band_" + k,
+          shiftBands.get(k).getLabel(),
+          shiftBands.get(k));
+      epi.setShowLegend(true);
     }
     for (int k = 0; k < ht.size(); k++) {
       EditablePlotItem gaugingsEpi = new EditablePlotItem(ht.get(k));
       gaugingsEpi.addSibling(Qt.get(k));
-      plotEditor.addEditablePlotItem("gaugings" + k, ht.get(k).getLabel(), gaugingsEpi);
+      gaugingsEpi.setShowLegend(false);
+      EditablePlotItem epi = plotEditor.addEditablePlotItem("gaugings" + k,
+          ht.get(k).getLabel(),
+          gaugingsEpi);
+      epi.setShowLegend(false);
     }
     plotEditor.updateEditor();
+    stackedPlot.updatePlots();
 
   }
 }
